--- a/boaNoite.html
+++ b/boaNoite.html
@@ -35,7 +35,7 @@
             </ul>
         </nav>
         <main>
-            <h1>Imagens de Bom Dia e Boa Noite Gratuitas</h1>
+            <h1>Imagens de Boa Noite Gratuitas</h1>
             <article class="principal">
                 
                 <div class="divConteudo">
